--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:background="@color/colorPrimary"
-    tools:context=".OnBoardingActivity">
+    tools:context=".activities.OnBoardingActivity">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
