--- a/app/src/main/res/layout/alarms_widget.xml
+++ b/app/src/main/res/layout/alarms_widget.xml
@@ -12,9 +12,9 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_margin="8dp"
-        android:background="@android:color/black"
+        android:background="@android:color/white"
         android:contentDescription="@string/appwidget_text"
-        android:textColor="#ffffff"
+        android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold|italic" />
 
